refactor: split codebase by feature