@@ -3,11 +3,11 @@ package baseball;
 import camp.nextstep.edu.missionutils.Console;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class InputNum {
 
-    public List<Integer> getInputNum() {
+    public List<Integer> getPlayerNum() {
+        System.out.print("숫자를 입력해주세요 : ");
         String input = Console.readLine();
 
         if (input.length() != 3 || !input.matches("[1-9]+")) {
@@ -19,9 +19,16 @@ public class InputNum {
             inputList.add(input.charAt(i) - '0');
         }
 
-        if (inputList.stream().distinct().collect(Collectors.toList()).size() != inputList.size()) {
+        if (inputList.stream().distinct().toList().size() != inputList.size()) {
             throw new IllegalArgumentException();
         }
         return inputList;
+    }
+
+    public String getExitNum() {
+        System.out.println("3개의 숫자를 모두 맞히셨습니다! 게임 종료");
+        System.out.println("게임을 새로 시작하려면 1, 종료하려면 2를 입력하세요.");
+
+        return Console.readLine();
     }
 }
